{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 36,
  "lineage": "e917e888-e45a-336f-34e2-9cffa8c09100",
  "resources": [
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2f727d8ad783dd2",
            "association_id": "eipassoc-0b91d8622126cfcf5",
            "domain": "vpc",
            "id": "eipalloc-0a2f727d8ad783dd2",
            "instance": "i-044d471cc68d0e15a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02125c3b159dd2847",
            "private_dns": "ip-10-0-10-80.ap-south-1.compute.internal",
            "private_ip": "10.0.10.80",
            "public_dns": "ec2-65-1-240-165.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.240.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.aws-ec2.aws_instance.server",
            "module.aws-ec2.aws_security_group.vpc_ingress",
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_subnet.ec2_subnet_public"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a72defc831ef52d",
            "association_id": "eipassoc-04ae8aaa96da4ba0b",
            "domain": "vpc",
            "id": "eipalloc-01a72defc831ef52d",
            "instance": "i-05a0ecebcb5a78b9d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f8c4c8f085ffd693",
            "private_dns": "ip-10-0-11-147.ap-south-1.compute.internal",
            "private_ip": "10.0.11.147",
            "public_dns": "ec2-3-109-119-176.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.119.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.aws-ec2.aws_instance.server",
            "module.aws-ec2.aws_security_group.vpc_ingress",
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_subnet.ec2_subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cb303d67f1ca56e",
            "association_id": "eipassoc-07e37323a0c328689",
            "domain": "vpc",
            "id": "eipalloc-00cb303d67f1ca56e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f3e0b3b74d35cdc3",
            "private_dns": "ip-10-0-10-21.ap-south-1.compute.internal",
            "private_ip": "10.0.10.21",
            "public_dns": "ec2-3-109-126-186.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.126.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d115e6b0b811d8fc",
            "association_id": "eipassoc-0f9eb0ced41900401",
            "domain": "vpc",
            "id": "eipalloc-0d115e6b0b811d8fc",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0077986a6d0731d24",
            "private_dns": "ip-10-0-11-207.ap-south-1.compute.internal",
            "private_ip": "10.0.11.207",
            "public_dns": "ec2-65-1-194-165.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.194.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:110348336223:instance/i-044d471cc68d0e15a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044d471cc68d0e15a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02125c3b159dd2847",
            "private_dns": "ip-10-0-10-80.ap-south-1.compute.internal",
            "private_ip": "10.0.10.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027c30465af45e81b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f958a71580f5f8c",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c6c506ded09a98d"
            ]
          },
          "dependencies": [
            "module.aws-ec2.aws_security_group.vpc_ingress",
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_subnet.ec2_subnet_public"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:110348336223:instance/i-00ad8c26c1217a4f5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ad8c26c1217a4f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6b637c4a9689f49",
            "private_dns": "ip-10-0-1-169.ap-south-1.compute.internal",
            "private_ip": "10.0.1.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050ae4f2113ac7468",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ee4a73617f5a5c9",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c6c506ded09a98d"
            ]
          },
          "dependencies": [
            "module.aws-ec2.aws_security_group.vpc_ingress",
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:110348336223:instance/i-05a0ecebcb5a78b9d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a0ecebcb5a78b9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8c4c8f085ffd693",
            "private_dns": "ip-10-0-11-147.ap-south-1.compute.internal",
            "private_ip": "10.0.11.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c80cd5b4eb459d9e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e6bbf48dc241fed",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c6c506ded09a98d"
            ]
          },
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc",
            "module.aws-ec2.aws_security_group.vpc_ingress",
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_subnet.ec2_subnet_public"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04db49c0fb2215364",
            "arn": "arn:aws:ec2:ap-south-1:110348336223:instance/i-0e6f7cc0578a488de",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6f7cc0578a488de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eef8c83f27ce6ec2",
            "private_dns": "ip-10-0-2-102.ap-south-1.compute.internal",
            "private_ip": "10.0.2.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0010541a43e089449",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0443e4a71622260be",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c6c506ded09a98d"
            ]
          },
          "dependencies": [
            "module.aws-ec2.aws_security_group.vpc_ingress",
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:internet-gateway/igw-0d4c3fd892b1feb97",
            "id": "igw-0d4c3fd892b1feb97",
            "owner_id": "110348336223",
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_ec2_vpc_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0268c7d3ac3d807c3",
            "original_route_table_id": "rtb-0646a89d89b3a4c04",
            "route_table_id": "rtb-0423b857511a53146",
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "dependencies": [
            "module.aws-ec2.aws_route_table.main_ec2_route_table",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cb303d67f1ca56e",
            "connectivity_type": "public",
            "id": "nat-060615f9f7a377828",
            "network_interface_id": "eni-0f3e0b3b74d35cdc3",
            "private_ip": "10.0.10.21",
            "public_ip": "3.109.126.186",
            "subnet_id": "subnet-04f958a71580f5f8c"
          },
          "dependencies": [
            "module.aws-ec2.aws_eip.natgw",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d115e6b0b811d8fc",
            "connectivity_type": "public",
            "id": "nat-059985dd7e5c69470",
            "network_interface_id": "eni-0077986a6d0731d24",
            "private_ip": "10.0.11.207",
            "public_ip": "65.1.194.165",
            "subnet_id": "subnet-08e6bbf48dc241fed"
          },
          "dependencies": [
            "module.aws-ec2.aws_eip.natgw",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d4c3fd892b1feb97",
            "id": "r-rtb-075e8b9c9df4ab1b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075e8b9c9df4ab1b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_internet_gateway.igw",
            "module.aws-ec2.aws_route_table.public_route_table",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_route",
      "name": "natgw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ad6772c2dc60e27b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-060615f9f7a377828",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad6772c2dc60e27b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_nat_gateway.natgw",
            "module.aws-ec2.aws_route_table.private_route_table",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc",
            "module.aws-ec2.aws_eip.natgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08073fd1f3dd0aafc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-059985dd7e5c69470",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08073fd1f3dd0aafc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_nat_gateway.natgw",
            "module.aws-ec2.aws_route_table.private_route_table",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc",
            "module.aws-ec2.aws_eip.natgw"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_ec2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:route-table/rtb-0423b857511a53146",
            "id": "rtb-0423b857511a53146",
            "owner_id": "110348336223",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main_ec2_route_table"
            },
            "tags_all": {
              "Name": "main_ec2_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:route-table/rtb-0ad6772c2dc60e27b",
            "id": "rtb-0ad6772c2dc60e27b",
            "owner_id": "110348336223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-060615f9f7a377828",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ec2-private-route-table-0"
            },
            "tags_all": {
              "Name": "ec2-private-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:route-table/rtb-08073fd1f3dd0aafc",
            "id": "rtb-08073fd1f3dd0aafc",
            "owner_id": "110348336223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059985dd7e5c69470",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ec2-private-route-table-1"
            },
            "tags_all": {
              "Name": "ec2-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:route-table/rtb-075e8b9c9df4ab1b8",
            "id": "rtb-075e8b9c9df4ab1b8",
            "owner_id": "110348336223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4c3fd892b1feb97",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ec2-public-route-table"
            },
            "tags_all": {
              "Name": "ec2-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00accc34680db2a39",
            "route_table_id": "rtb-0ad6772c2dc60e27b",
            "subnet_id": "subnet-08ee4a73617f5a5c9"
          },
          "dependencies": [
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_vpc.ec2_vpc",
            "module.aws-ec2.aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef24dd2eca13fc1c",
            "route_table_id": "rtb-08073fd1f3dd0aafc",
            "subnet_id": "subnet-0443e4a71622260be"
          },
          "dependencies": [
            "module.aws-ec2.aws_route_table.private_route_table",
            "module.aws-ec2.aws_subnet.ec2_subnet_private",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e2821ffac16320e",
            "route_table_id": "rtb-075e8b9c9df4ab1b8",
            "subnet_id": "subnet-04f958a71580f5f8c"
          },
          "dependencies": [
            "module.aws-ec2.aws_route_table.public_route_table",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055ac0d1262bf26f0",
            "route_table_id": "rtb-075e8b9c9df4ab1b8",
            "subnet_id": "subnet-08e6bbf48dc241fed"
          },
          "dependencies": [
            "module.aws-ec2.aws_route_table.public_route_table",
            "module.aws-ec2.aws_subnet.ec2_subnet_public",
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:security-group/sg-05c6c506ded09a98d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 1234,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1234
              },
              {
                "cidr_blocks": [
                  "10.101.0.0/16"
                ],
                "description": "ssh",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              }
            ],
            "id": "sg-05c6c506ded09a98d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "ssh",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "terraform-20211204105748444900000001",
            "name_prefix": "terraform-",
            "owner_id": "110348336223",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:subnet/subnet-08ee4a73617f5a5c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08ee4a73617f5a5c9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110348336223",
            "tags": {
              "Name": "privsub1"
            },
            "tags_all": {
              "Name": "privsub1"
            },
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:subnet/subnet-0443e4a71622260be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0443e4a71622260be",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110348336223",
            "tags": {
              "Name": "privsub2"
            },
            "tags_all": {
              "Name": "privsub2"
            },
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:subnet/subnet-04f958a71580f5f8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-04f958a71580f5f8c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110348336223",
            "tags": {
              "Name": "pubsub1"
            },
            "tags_all": {
              "Name": "pubsub1"
            },
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:subnet/subnet-08e6bbf48dc241fed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-08e6bbf48dc241fed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "110348336223",
            "tags": {
              "Name": "pubsub2"
            },
            "tags_all": {
              "Name": "pubsub2"
            },
            "vpc_id": "vpc-0ad1a6126a20b3657"
          },
          "dependencies": [
            "module.aws-ec2.aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:110348336223:vpc/vpc-0ad1a6126a20b3657",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02385388bdce2a778",
            "default_route_table_id": "rtb-0423b857511a53146",
            "default_security_group_id": "sg-086c83a633e9c709f",
            "dhcp_options_id": "dopt-024d0c358e4c7669a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ad1a6126a20b3657",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0423b857511a53146",
            "owner_id": "110348336223",
            "tags": {
              "Name": "ec2-vpc"
            },
            "tags_all": {
              "Name": "ec2-vpc"
            }
          }
        }
      ]
    }
  ]
}